--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <p>my name is Gauri</p>
     <p>I am From Dharmpuri </p>
 
+    <ul>
+        <li>create</li>
+        <li>read</li>
+        <li>update</li>
+        <li>delete</li>
+    </ul>
 </body>
 </html>
