--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
         <li>update</li>
         <li>delete</li>
     </ul>
+
+    <h1>
+        This is a new Heading
+    </h1>
+    <p>About pages are perfect spaces to talk about where you started, how you've grown, and the ideals that have helped your organization mature. Use ...</p>
 </body>
 </html>
