changes in practice 3

--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
         This is a new Heading
     </h1>
     <p>About pages are perfect spaces to talk about where you started, how you've grown, and the ideals that have helped your organization mature. Use ...</p>
+
+    
+    <ul>
+        <li>Mango</li>
+        <li>Orange</li>
+        <li>Purple</li>
+        <li>red</li>
+    </ul>
+
 </body>
 </html>
