canges to commit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </h1>
     <p>About pages are perfect spaces to talk about where you started, how you've grown, and the ideals that have helped your organization mature. Use ...</p>
 
-    
+    <h1>List of fruits and colors</h1>
     <ul>
         <li>Mango</li>
         <li>Orange</li>
